--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   </head>
   <body>
+    <h1>Hai</h1>
     <py-script>
         print('Hello, World!')
     </py-script>
