--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div id="manual-write"></div>
-    <button py-click="write_to_page()" id="manual">Say Hello</button>
+    <button py-click="write_to_page()" >Say Hello</button>
 
     <py-script>
     def write_to_page():
