--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <py-script>
     def write_to_page():
       manual_div = Element("manual-write")
-      manual_div.element.innerText = "Hello World"
+      manual_div.element.innerText = "<h1>Hello World</h1>"
     </py-script>
   </body>
 </html>
