--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <title>Writing to the page</title>
-
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-  </head>
+<script defer src="https://pyscript.net/latest/pyscript.js"></script>
+</head>
+<body>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <form onsubmit="return false;">
+        <div class="form-group">
+          <label for="usr">Name:</label>
+          <input type="text" class="form-control" id="usr" name="name">
+        </div>
+        <div class="form-group">
+          <label for="usr">Country:</label>
+          <select class="form-control" id="contry">
+            <option value="India">India</option>
+            <option value="Sreelanka">Sreelanka</option>
+            <option value="Pak">Pak</option>
+          </select>
+        </div>
+        <button type="submit" psy-onClick="sub" class="btn btn-success btn-block" id="btn-form">Submit</button>
+       </form>
+    </div>
+    <div class="col-12">
+    </div>
+  </div>
+</div>
 
-  <body>
-    <div id="manual-write"></div>
-    <button py-click="write_to_page()" >Say Hello</button>
-
-    <py-script>
-    def write_to_page():
-      manual_div = Element("manual-write")
-      manual_div.element.innerText = "<h1>Hello World</h1>"
-    </py-script>
-  </body>
+</body>
 </html>
