--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
             <option value="Pak">Pak</option>
           </select>
         </div>
-        <button type="submit" psy-onClick="sub" class="btn btn-success btn-block" id="btn-form">Submit</button>
+        <button type="submit" pys-onClick="sub" class="btn btn-success btn-block" id="btn-form">Submit</button>
        </form>
     </div>
     <div class="col-12">
+    	<p id="output"></p>
     </div>
   </div>
 </div>
-
+<py-script>
+def sub():
+		result_place= Element('output')
+        result_place.write({Element('name').value})
+</py-script>
 </body>
 </html>
