--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <py-script>
 def sub():
 		result_place= Element('output')
-        result_place.write({Element('name').value})
+        result_place.write(f"{Element('name').value}")
 </py-script>
 </body>
 </html>
