--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <form onsubmit="return false;">
         <div class="form-group">
           <label for="usr">Name:</label>
-          <input type="text" class="form-control" id="usr" name="name">
+          <input type="text" class="form-control" id="name" name="name">
         </div>
         <div class="form-group">
           <label for="usr">Country:</label>
