--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 </div>
 <py-script>
-def sub():
+def sub(a,k):
 		result_place= Element('output')
         result_place.write(f"{Element('name').value}")
 </py-script>
